fixes for padding; fix overflowing toolbar on narrow screens

--- a/static/index.css
+++ b/static/index.css
@@ -26,7 +26,7 @@ div.wiki .wafl {
 }
 #tableeditor {
     /* margin:8px 140px 10px 0px; */
-    margin:8px 10px 10px 0px;
+    margin:0;
 }
 
 .te_download tr:nth-child(2) td:nth-child(1) {
@@ -835,7 +835,7 @@ body.vex-open {
 }
 
 body, body #tableeditor {
-    margin-top: 0;
+    margin: 0;
     padding: 0;
 }
 #restore {
